# BASIL

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Containerfile-ai  Containerfile-api-debian  Containerfile-api-fedora  Containerfile-api-rpi  Containerfile-app  Containerfile-pandoc  Dockerfile-api  Dockerfile-app  README.md  SOFTWARE_REQUIREMENTS_IMPORT.md  changelog.md  cypress.config.js  nginx.conf  package-lock.json  package.json  pandoc_server.py  pyproject.toml  requirements.txt  run_custom_demo.sh  run_demo.sh  run_demo_rpi.sh
.github/workflows/: build-api.yaml  build.yaml
api/: README.md  ai.py  api.py  api_response.py  api_url.py  api_utils.py  import_manager.py  lava-job.yaml  notifier.py  pandoc.py  pdf_converter.py  repos_scanner.py  settings.yaml  spdx_manager.py  testrun.py  testrun_base.py  testrun_github_actions.py  testrun_gitlab_ci.py  testrun_lava.py  testrun_plugin_presets.yaml  testrun_testing_farm.py  testrun_tmt.py  tmt-dummy-failing-test.fmf  tmt-dummy-test.fmf  tmt-plan.fmf  tmt_export_json.sh  tmttestrun.py
api/configs/: email_template.html  settings.yaml  testrun_plugin_presets.yaml
api/test/: conftest.py  test_admin_reset_user_password.py  test_admin_test_run_plugins_presets.py  test_ai.py  test_alert.py  test_api.py  test_api_documents_mapping.py  test_api_dynamic_view_mapping.py  test_api_history.py  test_api_justifications_mapping.py  test_api_misc_routes.py  test_api_new_version.py  test_api_specifications_mapping.py  test_api_sw_requirement_mapping.py  test_api_test_cases_mapping.py  test_api_test_specifications_mapping.py  test_api_utils.py  test_api_write_permission_request.py  test_comment.py  test_document.py  test_document_document_mapping.py  test_fix_new_specification_warnings.py  test_fork.py  test_justification.py  test_mapping_history.py  test_mapping_usage.py  test_notifier.py  test_repos_scanner.py  test_spdx_api_validation.py  test_sw_requirement.py  test_sw_requirement_sw_requirement_mapping.py  test_sw_requirement_test_case_mapping.py  test_sw_requirement_test_specification_mapping.py  test_test_case.py  test_test_case_import.py  test_test_case_local_file_implementation.py  test_test_run_config.py  test_test_run_plugin_presets.py  test_test_specification.py  test_test_specification_test_case_mapping.py  (+19 more)
app/: .eslintrc.js  README.md  cypress.config.ts  package-lock.json  package.json  stylePaths.js  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
app/src/: index.html  index.tsx  typings.d.ts
cypress/e2e/: api.cy.js  login.cy.js  mapping_justification.cy.js  mapping_nested_sw_requirement.cy.js  mapping_sw_requirement.cy.js  mapping_test_case.cy.js  mapping_test_specification.cy.js
cypress/fixtures/: api.json  consts.json  justification.json  sw_requirement.json  test_case.json  test_specification.json
cypress/support/: commands.js
db/: README.md  db_orm.py
db/models/: api.py  api_document.py  api_justification.py  api_sw_requirement.py  api_test_case.py  comment.py  (+19 more)
docs/: Makefile
misc/: tmt_provision_podman.patch  tmt_provision_podman_debian.patch  tmt_provision_podman_debian_apt.patch
scripts/: check_version.sh
(+183 files in other folders)
