[project]
name = "BASIL"
version = "1.1.2"
description = "A web based application to support Quality Departments in Funtional Safety related tasks."
authors = [
    {name = "Luigi Pellecchia", email = "lpellecc@redhat.com"},
]
maintainers = [
    {name = "Luigi Pellecchia", email = "lpellecc@redhat.com"}
]
dependencies = [
    "Flask==2.2.2",
    "Flask-Cors==3.0.10",
    "Flask-RESTful==0.3.9",
    "requests==2.28.2",
    "SQLAlchemy==2.0.19",
    "spdx-tools==0.8.1",
    "Werkzeug==2.2.2"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
lint = ["flake8"]
test = ["pytest"]
