[project]
name = "BASIL"
version = "1.8.1"
description = "open source software quality management tool"
authors = [
    {name = "Luigi Pellecchia", email = "lpellecc@redhat.com"},
]
maintainers = [
    {name = "Luigi Pellecchia", email = "lpellecc@redhat.com"}
]
dependencies = [
    "Flask==2.2.2",
    "Flask-Cors==3.0.10",
    "Flask-RESTful==0.3.9",
    "PyYAML==6.0.1",
    "SQLAlchemy==2.0.19",
    "Werkzeug==2.2.2",
    "gunicorn==21.2.0",
    "openai==1.90.0",
    "psycopg2-binary==2.9.10",
    "pyaml-env==1.2.1",
    "pytest==8.0.1",
    "python-gitlab==3.15.0",
    "requests==2.28.2",
    "spdx3-validate==0.0.5",
    "tmt==1.36.0",
    "tmt[provision-container]"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}

[project.urls]
Documentation = "https://basil-the-fusa-spice.readthedocs.io"
Repository = "https://github.com/elisa-tech/BASIL.git"
Issues = "https://github.com/elisa-tech/BASIL/issues"
Changelog = "https://github.com/elisa-tech/BASIL/blob/main/changelog.md"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
lint = ["flake8"]
test = ["pytest"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = [
  "api"
]
testpaths = [
    "api/test"
]
